--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <div class="max-w-7xl mx-auto">
         <header class="text-center mb-8">
             <h1 class="text-3xl sm:text-4xl font-bold text-cyan-400">Resource Gathering Optimizer</h1>
+        <div class="inline-block border p-1 border-gray-500 rounded-lg mt-4"></div>
+            <p class="text-xs sm:text-sm text-white-400 font-medium italic mt-2">Courtesy of S16</p>
+        </div>
             <p class="text-gray-400 mt-2">Find the optimal gathering plan to maximize your final bonus.</p>
         </header>
 
