--- a/curra.html
+++ b/curra.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resource Gathering Optimizer</title>
+    <title>Curra's Optimizer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -28,8 +28,8 @@
 
     <div class="max-w-7xl mx-auto">
         <header class="text-center mb-8">
-            <h1 class="text-3xl sm:text-4xl font-bold text-cyan-400">Resource Gathering Optimizer</h1>
-            <p class="text-xs sm:text-sm text-white-400 font-medium italic mt-2"><a href="./curra.html" class="text-white no-underline">C</a>ourtesy of S16</p>
+            <h1 class="text-3xl sm:text-4xl font-bold text-cyan-400">Curra's Farmer OnlyFans</h1>
+            <p class="text-xs sm:text-sm text-white-400 font-medium italic mt-2">Courtesy of <a href="./index.html" class="text-white no-underline">S</a>16</p>
             <p class="text-gray-400 mt-2">Find the optimal gathering plan to maximize your final bonus.</p>
         </header>
 
@@ -106,17 +106,17 @@
     // --- DATA CONFIGURATION ---
     const config = {
         marches: [
-            { id: 1, name: 'March 1', speedBonus: 1.62, finalBonus: 0.48, baseLoad: 19000000 },
-            { id: 2, name: 'March 2', speedBonus: 2.83, finalBonus: 0.40, baseLoad: 21000000 },
-            { id: 3, name: 'March 3', speedBonus: 3.22, finalBonus: 0.50, baseLoad: 21000000 },
-            { id: 4, name: 'March 4', speedBonus: 2.13, finalBonus: 0.53, baseLoad: 18000000 },
-            { id: 5, name: 'March 5', speedBonus: 2.09, finalBonus: 0.61, baseLoad: 16000000 }
+            { id: 1, name: 'March 1', speedBonus: 3.17, finalBonus: 0.60, baseLoad: 25000000 },
+            { id: 2, name: 'March 2', speedBonus: 3.28, finalBonus: 0.34, baseLoad: 25000000 },
+            { id: 3, name: 'March 3', speedBonus: 2.09, finalBonus: 0.35, baseLoad: 18000000 },
+            { id: 4, name: 'March 4', speedBonus: 2.55, finalBonus: 0.53, baseLoad: 24000000 },
+            { id: 5, name: 'March 5', speedBonus: 2.75, finalBonus: 0.40, baseLoad: 18000000 }
         ],
         resources: [
-            { name: 'Wood', speedBonus: 0.24 },
-            { name: 'Food', speedBonus: 0.14 },
-            { name: 'Stone', speedBonus: 0.17 },
-            { name: 'Gold', speedBonus: 0.24 }
+            { name: 'Wood', speedBonus: 0.49 },
+            { name: 'Food', speedBonus: 0.59 },
+            { name: 'Stone', speedBonus: 0.48 },
+            { name: 'Gold', speedBonus: 0.59 }
         ],
         globalSpeeds: [
             { name: 'No Global', speedBonus: 0.00 },
