--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
 <body class="bg-gray-900 text-white p-4 sm:p-6 lg:p-8">
 
     <div class="max-w-7xl mx-auto">
-        <header class="text-center mb-8">
-            <h1 class="text-3xl sm:text-4xl font-bold text-cyan-400">Resource Gathering Optimizer</h1>
-            <p class="text-xs sm:text-sm text-white-400 font-medium italic mt-2"><a href="./curra.html" class="text-white no-underline">C</a>ourtesy of S16</p>
-            <p class="text-gray-400 mt-2">Find the optimal gathering plan to maximize your final bonus.</p>
+        <!-- The header now uses flexbox for better spacing and alignment -->
+        <header class="text-center mb-8 flex items-center justify-center space-x-6">
+            <img src="https://raw.githubusercontent.com/Sombrero16/Gathering-planner/main/assets/pictures/image02.jpg" alt="Decorative image" class="w-24 h-24 sm:w-32 sm:h-32 rounded-full border-2 border-cyan-400">
+            <div>
+                <h1 class="text-3xl sm:text-4xl font-bold text-cyan-400">Resource Gathering Optimizer</h1>
+                <p class="text-xs sm:text-sm text-white-400 font-medium italic mt-2"><a href="./curra.html" class="text-white no-underline">C</a>ourtesy of S16</p>
+                <p class="text-gray-400 mt-2">Find the optimal gathering plan to maximize your final bonus.</p>
+            </div>
+            <img src="https://raw.githubusercontent.com/Sombrero16/Gathering-planner/main/assets/pictures/image01.jpg" alt="Decorative image" class="w-24 h-24 sm:w-32 sm:h-32 rounded-full border-2 border-cyan-400">
         </header>
 
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
@@ -67,6 +72,7 @@
                             <option value="byzantines">Byzantines</option>
                             <option value="egyptian">Egyptian</option>
                         </select>
+                        <p id="byzantines-notice" class="text-xs text-gray-400 mt-1 hidden">Note: Byzantinian civilization provides a 5% stone gathering speed bonus.</p>
                         <p id="egyptian-notice" class="text-xs text-gray-400 mt-1 hidden">Note: Egyptian civilization provides a 5% troop load bonus.</p>
                     </div>
                      <div>
@@ -156,7 +162,8 @@
         resourceEditor: document.getElementById('resource-editor'),
         imperialTitle: document.getElementById('imperial-title'),
         civilizationSelect: document.getElementById('select-civilization'),
-        egyptianNotice: document.getElementById('egyptian-notice')
+        egyptianNotice: document.getElementById('egyptian-notice'),
+        byzantinesNotice: document.getElementById('byzantines-notice')
     };
 
     // --- INITIALIZATION ---
@@ -311,7 +318,12 @@
         // Handle UI toggles
         if (UIElements.civilizationSelect.value === 'egyptian') {
             UIElements.egyptianNotice.classList.remove('hidden');
+            UIElements.byzantinesNotice.classList.add('hidden');
+        } else if (UIElements.civilizationSelect.value === 'byzantines') {
+            UIElements.byzantinesNotice.classList.remove('hidden');
+            UIElements.egyptianNotice.classList.add('hidden');
         } else {
+            UIElements.byzantinesNotice.classList.add('hidden');
             UIElements.egyptianNotice.classList.add('hidden');
         }
 
@@ -516,4 +528,3 @@
 
 </body>
 </html>
-
