--- a/curra.html
+++ b/curra.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curra's Optimizer</title>
+    <title>Curra's OnlyFarms</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -27,10 +27,14 @@
 <body class="bg-gray-900 text-white p-4 sm:p-6 lg:p-8">
 
     <div class="max-w-7xl mx-auto">
-        <header class="text-center mb-8">
-            <h1 class="text-3xl sm:text-4xl font-bold text-cyan-400">Curra's Farmer OnlyFans</h1>
-            <p class="text-xs sm:text-sm text-white-400 font-medium italic mt-2">Courtesy of <a href="./index.html" class="text-white no-underline">S</a>16</p>
-            <p class="text-gray-400 mt-2">Find the optimal gathering plan to maximize your final bonus.</p>
+        <header class="text-center mb-8 flex items-center justify-center space-x-6">
+             <img src="https://raw.githubusercontent.com/Sombrero16/Gathering-planner/main/assets/pictures/image02.jpg" alt="Decorative image" class="w-24 h-24 sm:w-32 sm:h-32 rounded-xl border-2 border-cyan-400 object-cover">
+            <div>
+                <h1 class="text-3xl sm:text-4xl font-bold text-cyan-400">Curra´s OnlyFarms</h1>
+                <p class="text-xs sm:text-sm text-white-400 font-medium italic mt-2">Courtesy of <a href="./index.html" class="text-white no-underline">S</a>16</p>
+                <p class="text-gray-400 mt-2">Find the optimal gathering plan to maximize your final bonus.</p>
+            </div>
+            <img src="https://raw.githubusercontent.com/Sombrero16/Gathering-planner/main/assets/pictures/image01.jpg" alt="Decorative image" class="w-24 h-24 sm:w-32 sm:h-32 rounded-xl border-2 border-cyan-400 object-cover">
         </header>
 
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
@@ -67,6 +71,7 @@
                             <option value="byzantines">Byzantines</option>
                             <option value="egyptian">Egyptian</option>
                         </select>
+                        <p id="byzantines-notice" class="text-xs text-gray-400 mt-1 hidden">Note: Byzantinian civilization provides a 5% stone gathering speed bonus.</p>
                         <p id="egyptian-notice" class="text-xs text-gray-400 mt-1 hidden">Note: Egyptian civilization provides a 5% troop load bonus.</p>
                     </div>
                      <div>
@@ -156,7 +161,8 @@
         resourceEditor: document.getElementById('resource-editor'),
         imperialTitle: document.getElementById('imperial-title'),
         civilizationSelect: document.getElementById('select-civilization'),
-        egyptianNotice: document.getElementById('egyptian-notice')
+        egyptianNotice: document.getElementById('egyptian-notice'),
+        byzantinesNotice: document.getElementById('byzantines-notice')
     };
 
     // --- INITIALIZATION ---
@@ -311,7 +317,12 @@
         // Handle UI toggles
         if (UIElements.civilizationSelect.value === 'egyptian') {
             UIElements.egyptianNotice.classList.remove('hidden');
+            UIElements.byzantinesNotice.classList.add('hidden');
+        } else if (UIElements.civilizationSelect.value === 'byzantines') {
+            UIElements.byzantinesNotice.classList.remove('hidden');
+            UIElements.egyptianNotice.classList.add('hidden');
         } else {
+            UIElements.byzantinesNotice.classList.add('hidden');
             UIElements.egyptianNotice.classList.add('hidden');
         }
 
@@ -502,6 +513,7 @@
                         <span class="font-medium text-cyan-400">+ ${formatNumber(results.bonusResources)}</span>
                     </div>
                 </div>
+                 <img src="https://raw.githubusercontent.com/Sombrero16/Gathering-planner/main/assets/pictures/image03.jpg" alt="Summary Banner" class="w-full h-auto mt-6 rounded-lg object-cover">
             </div>
         `;
         
@@ -516,4 +528,3 @@
 
 </body>
 </html>
-
